# Pi-python

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  final_terminal.py  pyproject.toml  test.py
.person/skills/daily-paper/: SKILL.md
.person/skills/daily-paper/scripts/: daily_paper.py  pdf_parser.py
.person/skills/demo-greet/: SKILL.md  script.py
.person/skills/planning-with-files/scripts/: session-catchup.py
agent_core/: __init__.py  agent.py  agent_loop.py  logging.py  proxy.py  types.py
agent_core/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
code_agent/: __init__.py  coding_agent.py  session.py
code_agent/resources/: __init__.py  agent_configs.py  memory.py  memory_tools.py  resource_tools.py  skills.py
code_agent/tools/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  read.py  write.py
